testsuite/tests/structs/invalid_env_md/implicit.lkt
import common

dynvar md: Metadata
